--- a/frontend/index.html
+++ b/frontend/index.html
@@ -736,9 +736,9 @@ function markdownToHtml(markdown) {
 </script>
 
  <script>
-const apiUrl = 'https://chat.liangdabiao.com/myapi/v1/chat-bot/stream';
-const botConfigurationUrl = 'https://chat.liangdabiao.com/myapi/v1/chat-bot-config';
-const nonStreamApiUrl = 'https://chat.liangdabiao.com/myapi/v1/chat-bot';
+const apiUrl = 'https://chat.xxx.com/myapi/v1/chat-bot/stream';
+const botConfigurationUrl = 'https://chat.xxx.com/myapi/v1/chat-bot-config';
+const nonStreamApiUrl = 'https://chat.xxx.com/myapi/v1/chat-bot';
 const copyButtons = document.querySelectorAll('.lwh-open-cbot .copy-button');
 const button = document.querySelector('.lwh-open-cbot #submit-btn');
 let messageInput = document.querySelector('.lwh-open-cbot #message');
